added some updates

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -153,7 +153,7 @@
                 <a href="{% url 'team' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
-                      <i class="tf-chat"></i>
+                      <i class="tf-ion-ios-people-outline"></i>
                     </span>
                     <span class="title">Team</span>
                   </span>
