--- a/portfolio/templates/works.html
+++ b/portfolio/templates/works.html
@@ -24,66 +24,27 @@
           <div class="col-xs-12">
             <ul class="filter list-inline">
               <li><a href="#" class="active" data-filter="*">All</a></li>
-              <li><a href="#" data-filter=".Photoshop">Photoshop</a></li>
-              <li><a href="#" data-filter=".Illustrator">Illustrator</a></li>
-              <li><a href="#" data-filter=".Indesign">Indesign</a></li>
-              <li><a href="#" data-filter=".Artworks">Artworks</a></li>
+                {% for category in categories %}
+              <li><a href="{{ category.slug }}" data-filter=".{{ category.id }}">{{ category.name }}</a></li>
             </ul>
           </div>
         </div>
-
+            {% endfor %}
         <div class="row isotope-gutter">
-          <div class="col-xs-12 col-sm-6 col-md-4 Photoshop Illustrator">
+            {% for work in works %}
+          <div class="col-xs-12 col-sm-6 col-md-4 {{ work.category.id }}">
             <figure class="works-item">
-              <img src="../../static/images/works/1.jpg" alt="">
+              <img src="{{ work.image.url }}" alt="">
               <div class="overlay"></div>
               <figcaption class="works-inner">
-                <h4>Project Name</h4>
-                <p>Illustration, Digital Art</p>
+                <h4>{{ work.name }}</h4>
+                <p>{{ work.description|safe }}</p>
               </figcaption>
             </figure>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 Illustrator">
-            <figure class="works-item">
-              <img src="../../static/images/works/2.jpg" alt="">
-              <div class="overlay"></div>
-              <figcaption class="works-inner">
-                <h4>Project Name</h4>
-                <p>Illustration, Digital Art</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 Indesign Photoshop">
-            <figure class="works-item">
-              <img src="../../static/images/works/3.jpg" alt="">
-              <div class="overlay"></div>
-              <figcaption class="works-inner">
-                <h4>Project Name</h4>
-                <p>Illustration, Digital Art</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 Artworks Illustrator">
-            <figure class="works-item">
-              <img src="../../static/images/works/4.jpg" alt="">
-              <div class="overlay"></div>
-              <figcaption class="works-inner">
-                <h4>Project Name</h4>
-                <p>Illustration, Digital Art</p>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 Photoshop">
-            <figure class="works-item">
-              <img src="../../static/images/works/5.jpg" alt="">
-              <div class="overlay"></div>
-              <figcaption class="works-inner">
-                <h4>Project Name</h4>
-                <p>Illustration, Digital Art</p>
-              </figcaption>
-            </figure>
-          </div>
+        {% endfor %}
         </div> <!-- /.row -->
+
       </div> <!-- /.container -->
 
       <nav class="page-nav clear">
