--- a/portfolio/templates/works.html
+++ b/portfolio/templates/works.html
@@ -2,11 +2,12 @@
 {% load static %}
 {% block title %}Works page {% endblock %}
 {% block root %}
+
 <main class="site-wrapper">
   <div class="pt-table">
     <div class="pt-tablecell page-works relative">
       <!-- .close -->
-      <a href="../../theme" class="page-close"><i class="tf-ion-close"></i></a>
+      <a href="./" class="page-close"><i class="tf-ion-close"></i></a>
       <!-- /.close -->
 
       <div class="container">
@@ -24,28 +25,68 @@
           <div class="col-xs-12">
             <ul class="filter list-inline">
               <li><a href="#" class="active" data-filter="*">All</a></li>
-                {% for category in categories %}
-              <li><a href="{{ category.slug }}" data-filter=".{{ category.id }}">{{ category.name }}</a></li>
+              <li><a href="#" data-filter=".Photoshop">Photoshop</a></li>
+              <li><a href="#" data-filter=".Illustrator">Illustrator</a></li>
+              <li><a href="#" data-filter=".Indesign">Indesign</a></li>
+              <li><a href="#" data-filter=".Artworks">Artworks</a></li>
             </ul>
           </div>
         </div>
-            {% endfor %}
+
         <div class="row isotope-gutter">
-            {% for work in works %}
-          <div class="col-xs-12 col-sm-6 col-md-4 {{ work.category.id }}">
+          <div class="col-xs-12 col-sm-6 col-md-4 Photoshop Illustrator">
             <figure class="works-item">
-              <img src="{{ work.image.url }}" alt="">
+              <img src="images/works/1.jpg" alt="">
               <div class="overlay"></div>
               <figcaption class="works-inner">
-                <h4>{{ work.name }}</h4>
-                <p>{{ work.description|safe }}</p>
+                <h4>Project Name</h4>
+                <p>Illustration, Digital Art</p>
               </figcaption>
             </figure>
           </div>
-        {% endfor %}
+          <div class="col-xs-12 col-sm-6 col-md-4 Illustrator">
+            <figure class="works-item">
+              <img src="images/works/2.jpg" alt="">
+              <div class="overlay"></div>
+              <figcaption class="works-inner">
+                <h4>Project Name</h4>
+                <p>Illustration, Digital Art</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 Indesign Photoshop">
+            <figure class="works-item">
+              <img src="images/works/3.jpg" alt="">
+              <div class="overlay"></div>
+              <figcaption class="works-inner">
+                <h4>Project Name</h4>
+                <p>Illustration, Digital Art</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 Artworks Illustrator">
+            <figure class="works-item">
+              <img src="images/works/4.jpg" alt="">
+              <div class="overlay"></div>
+              <figcaption class="works-inner">
+                <h4>Project Name</h4>
+                <p>Illustration, Digital Art</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 Photoshop">
+            <figure class="works-item">
+              <img src="images/works/5.jpg" alt="">
+              <div class="overlay"></div>
+              <figcaption class="works-inner">
+                <h4>Project Name</h4>
+                <p>Illustration, Digital Art</p>
+              </figcaption>
+            </figure>
+          </div>
         </div> <!-- /.row -->
-
       </div> <!-- /.container -->
+
 
       <nav class="page-nav clear">
   <div class="container">
