added some updates

--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -14,7 +14,7 @@
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title text-center">
               <h2>About <span class="primary">me</span> <span class="title-bg">Name</span></h2>
-              <p>My full name is Abbos Rasulov Minavarjon o'g'li and  was born in Yangikurgan Town, Uzbekistan, 21 September 2001. I really like to learn new knowledge in my field and I am in 3rd year in my university .</p>
+              <p>Born on September 21, 2001, in the Yangikurgan, Fergana region. Graduated from the High School of mathematics and physics, did well in school so in 3rd year in Ferghana State University. Also successfully picked up programming skills and passion lies in learning about the latest technologies and up-to-date information about IT. </p>
             </div>
           </div>
 
