--- a/portfolio/templates/works.html
+++ b/portfolio/templates/works.html
@@ -15,8 +15,8 @@
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title text-center">
               <h2>My <span class="primary">works</span> <span class="title-bg">works</span></h2>
-              <p>I have been working in this field for more than 1 year and have successfully completed many projects during my career. So the result of my projects is below . Also You can find all information of the projects in my
-                  <a style='color: #02b7ce' href="https://github.com/abbos-rasulov">GitHub</a></p>
+              <p>I have been working in this field for more than 1 year and have successfully completed many projects during my career. Also You can find all information of the projects in my
+                  <a style='color: #02b7ce' href="https://github.com/abbos-rasulov">GitHub.</a> So the result of my projects is below.</p>
             </div>
           </div>
         </div> <!-- /.row -->
