--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -24,7 +24,7 @@
                 <img src="../../static/images/aba_photo.jpg" alt="">
               </figure> <!-- /.author-bio -->
               <div class="author-desc">
-                <p><b>Date of birth:</b> 21th september, 2001</p>
+                <p><b>Date of birth:</b> September 21, 2001</p>
                 <p><b>Language:</b> Uzbek, English</p>
                 <p><b>Expert in:</b> Web development</p>
                 <p><b>Team:</b> Available</p>
@@ -40,7 +40,7 @@
               <h3>Soft Skills</h3>
             </div>
             <div class="skill-wrapper">
-              {% for skill in skills %}
+              {% for skill in softskills %}
               <div class="progress clear">
                 <div class="skill-name">{{ skill.name }}</div>
 {#                <div class="skill-bar">#}
