--- a/portfolio/templates/services.html
+++ b/portfolio/templates/services.html
@@ -12,7 +12,7 @@
             <div class="page-title text-center">
               <h2>Awesome <span class="primary">Services</span> <span class="title-bg">Services</span></h2>
               <p>I have been working as a python backend developer since 2022. Worked in more than 10 live projects and
-                also with different clients! I like to challenge myself, pick up new knowledge and also good experience.Thus me and my team are ready to help you with your projects. Below are our services!</p>
+                also with different clients! I like to challenge myself, pick up new knowledge and also good experience.Thus me and my team are ready to help you with your projects. Our services are below!</p>
             </div>
 
             <div class="hexagon-menu services clear">
