--- a/portfolio/templates/works.html
+++ b/portfolio/templates/works.html
@@ -52,6 +52,7 @@
   <div class="container">
     <div class="flex flex-middle space-between">
       <span class="prev-page"><a href="{% url 'resume' %}" class="link">&larr; Prev Page</a></span>
+        <p style="color: #02b7ce" > <a href="{% static "Abbos Rasulov's Resume.pdf" %}" download>Download Resume</a></p>
       <span class="next-page"><a href="{% url 'team' %}" class="link">Next Page &rarr;</a></span>
     </div>
   </div>
