--- a/portfolio/templates/resume.html
+++ b/portfolio/templates/resume.html
@@ -14,8 +14,7 @@
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title text-center">
               <h2>My <span class="primary">history</span> <span class="title-bg">Resume</span></h2>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                laoreet dolore magna aliquam erat volutpat.</p>
+              <p>There all information of my education, experience, my career in here . By the way you can also download my resume and it has got more information</p>
             </div>
           </div>
         </div> <!-- /.row -->
@@ -74,6 +73,7 @@
   <div class="container">
     <div class="flex flex-middle space-between">
       <span class="prev-page"><a href="{% url 'services' %}" class="link">&larr; Prev Page</a></span>
+           <p style="color: #02b7ce" > <a href="{% static "Abbos Rasulov's Resume.pdf" %}" download>Download Resume</a></p>
       <span class="next-page"><a href="{% url 'works' %}" class="link">Next Page &rarr;</a></span>
     </div>
   </div>
