added some informations

--- a/portfolio/templates/team.html
+++ b/portfolio/templates/team.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Testimonials page {% endblock %}
+{% block title %}Team page {% endblock %}
 {% block root %}
 <main class="site-wrapper">
   <div class="pt-table">
@@ -14,8 +14,8 @@
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title text-center">
               <h2>My <span class="primary">Team</span><span class="title-bg">Team</span></h2>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                laoreet dolore magna aliquam erat volutpat.</p>
+              <p>
+            My team consists of experienced and qualified young programmers and if you would like to know something about member of the team you can find all information and githubs there.</p>
             </div>
           </div>
         </div> <!-- /.row -->
