--- a/portfolio/templates/team.html
+++ b/portfolio/templates/team.html
@@ -26,7 +26,7 @@
                 {% for team in teammates %}
               <div class="item">
                 <figure class="thumb">
-                  <div class="tm-hex" style="background-image: url('{{ team.image.url }}');">
+                    <a href="" ></a>
                     <div class="hexTop"></div>
                     <div class="hexBottom"></div>
                   </div>
@@ -36,7 +36,7 @@
                   </figcaption>
                 </figure>
                 <div class="text">
-                  <p>{{ team.description }}</p>
+                  <p>{{ team.description|safe }}</p>
                 </div>
               </div>
                 {% endfor %}
