--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1439,3 +1439,11 @@ label {
   border-color: #1e2530;
 }
 /*# sourceMappingURL=style.css.map */
+
+/*# sourceMappingURL=style.css.map */
+@media (max-width: 700px){
+  .homeimg {
+    width: 50%;
+  }
+
+}
