--- a/portfolio/templates/resume.html
+++ b/portfolio/templates/resume.html
@@ -38,6 +38,8 @@
                     <span>{{ edu.description|safe }}</span>
                   </div>
                 </div>
+                      {% empty %}
+                      <h4>no news yet</h4>
                   {% endfor %}
                 <!-- /.history-item -->
               </div>
@@ -62,7 +64,7 @@
                   </div>
                 </div>
                    {% empty %}
-                  <p>no skills yet</p>
+                  <h4>no news yet</h4>
                   {% endfor %}
                 <!-- /.history-item -->
               </div>
@@ -75,7 +77,7 @@
   <div class="container">
     <div class="flex flex-middle space-between">
       <span class="prev-page"><a href="{% url 'services' %}" class="link">&larr; Prev Page</a></span>
-           <p style="color: #02b7ce" > <a href="{% static "Abbos Rasulov's Resume.pdf" %}" download>Download Resume</a></p>
+        <p style="color: #02b7ce" > <a href="{% static "Abbos Rasulov's Resume.pdf" %}" download>Download Resume</a></p>
       <span class="next-page"><a href="{% url 'works' %}" class="link">Next Page &rarr;</a></span>
     </div>
   </div>
