--- a/portfolio/templates/resume.html
+++ b/portfolio/templates/resume.html
@@ -14,7 +14,7 @@
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title text-center">
               <h2>My <span class="primary">history</span> <span class="title-bg">Resume</span></h2>
-              <p>There all information of my education, experience, my career in here . By the way you can also download my resume and it has got more information</p>
+              <p>There all information of my education, experience, my career in here . By the way you can also download my resume and it has got more information.</p>
             </div>
           </div>
         </div> <!-- /.row -->
