--- a/portfolio/templates/team.html
+++ b/portfolio/templates/team.html
@@ -24,9 +24,10 @@
           <div class="col-xs-12">
             <div class="testimonials">
                 {% for teammate in teammates %}
+                    <a href="{{ teammate.url }}">
               <div class="item">
                 <figure class="thumb">
-                    <a href="" ></a>
+                  <div class="tm-hex" style="background-image: url('{{ teammate.image.url }}');">
                     <div class="hexTop"></div>
                     <div class="hexBottom"></div>
                   </div>
@@ -39,14 +40,15 @@
                   <p>{{ teammate.description|safe }}</p>
                 </div>
               </div>
-                    {% empty %}
-                    <h4>no news yet</h4>
+                    </a>
+                {% empty %}
+                <h4>no news yet</h4>
                 {% endfor %}
             </div>
-
           </div>
         </div> <!-- /.row -->
       </div> <!-- /.container -->
+
 
       <nav class="page-nav clear">
   <div class="container">
